Further work on reimplementation/refactoring - includes the addition of a method to determine context menu coordinates to prevent the menu being drawn offscreen.

--- a/FSM/Source/fsm2.css
+++ b/FSM/Source/fsm2.css
@@ -113,6 +113,7 @@ text.nodename {
     border: 1px #ccc solid;
     box-shadow: #333 2px 2px 4px;
     padding: 2px 2px 2px 2px;
+    font-size: x-small;
     font-family: arial, helvetica, sans-serif;
 }
 
